--- a/students/dunaieva_alona/09_css/css/style.css
+++ b/students/dunaieva_alona/09_css/css/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 18px;
-    color: var(--black, #070707);
+    color: #070707;
     background-color: #fff;
     text-align: center;
 }
