--- a/students/motkaliuk_andrii/12_position_transform/css/styles.css
+++ b/students/motkaliuk_andrii/12_position_transform/css/styles.css
@@ -2,28 +2,75 @@
      color: #000;
  }
 
+ /* font-family: 'Farro',sans-serif;
+font-family: 'Francois One',sans-serif;
+font-family: 'PT Sans',sans-serif;
+font-family: 'Staatliches',cursive;
+font-family: 'Tourney',cursive; */
+
+ .header_container {
+     display: flex;
+     align-items: center;
+     padding: 10px 120px;
+     max-width: 1200px;
+     width: 100%;
+     margin: 0 auto;
+     max-height: 54px;
+ }
+
  .container {
      display: flex;
      justify-content: space-between;
      padding: 0 120px;
-     max-width: 1440px;
+     max-width: 1200px;
      width: 100%;
      margin: 0 auto;
+     justify-content: space-between;
+     padding-top: 80px;
  }
 
- .header_container {
-     display: flex;
-     width: 100%;
+ .language {
+     text-align: center;
+     font-family: Tourney;
+     font-size: 22px;
+     font-weight: 600;
+     line-height: 18px;
+     letter-spacing: 0.88px;
+     flex-grow: 1;
  }
 
- .language {}
+ .name {
+     color: #000;
+     font-family: Staatliches;
+     font-size: 22px;
+     font-weight: 400;
+     letter-spacing: 0.66px;
+     flex-grow: 1000;
+     padding-left: 55px;
+ }
 
- .name {}
-
- .logo {}
+ .logo {
+     align-self: flex-end;
+     width: 238px;
+     height: 54px;
+     flex-grow: 1;
+ }
 
  .sidebar_conteiner {
-     width: 33%;
+     /* width: 33%; */
+     max-width: 385px;
+     width: 100%;
+     padding: 10px;
+ }
+
+ .side-bar_item {
+     border-bottom: 1px solid #BDBDBD;
+     height: 58px;
+     padding-top: 70px;
+ }
+
+ .side-bar_item:first-child {
+     padding-top: 0px;
  }
 
  .side-bar_item>a {
@@ -48,6 +95,18 @@
      text-transform: uppercase;
  }
 
+ h2>sup {
+     color: #000;
+     font-family: Farro;
+     font-size: 30px;
+     font-style: normal;
+     font-weight: 300;
+     line-height: normal;
+     letter-spacing: 1.2px;
+     vertical-align: super;
+     font-size: smaller;
+ }
+
  p {
      font-family: PT Sans;
      font-size: 28px;
@@ -57,7 +116,10 @@
  }
 
  .main-content_container {
-     width: 66%;
+     /* width: 66%; */
+     max-width: 785px;
+     width: 100%;
+     padding-top: 15px;
 
  }
 
@@ -72,6 +134,20 @@
      background-color: red;
      width: 100px;
      height: 8px;
-     top: -15px;
+     top: -20px;
      left: 0;
  }
+
+ .main-content_container>.content_item {
+     padding-top: 70px;
+ }
+
+ .main-content_container>.content_item:first-child {
+     padding-top: 0px;
+ }
+
+ .content_item>p {
+     padding-top: 40px;
+ }
+
+ .power {}
