--- a/students/linov_mykhailo/11_flexbox/css/styles.css
+++ b/students/linov_mykhailo/11_flexbox/css/styles.css
@@ -1,3 +1,51 @@
+@font-face {
+    font-display: swap;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    src: url('./fonts/montserrat-v25-latin-regular.woff2') format('woff2');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    src: url('./fonts/montserrat-v25-latin-500.woff2') format('woff2');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 600;
+    src: url('./fonts/montserrat-v25-latin-600.woff2') format('woff2');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    src: url('./fonts/montserrat-v25-latin-700.woff2') format('woff2');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    src: url('./fonts/poppins-v20-latin-regular.woff2') format('woff2');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    src: url('./fonts/poppins-v20-latin-700.woff2') format('woff2');
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -7,6 +55,12 @@ body {
     font-family: "Montserrat", Arial, Helvetica, sans-serif;
     font-size: 16px;
     color: #544837;
+    line-height: 26px;
+    font-weight: 500;
+}
+
+img {
+    max-width: 100%;
 }
 
 a {
@@ -20,13 +74,31 @@ li {
 
 .container {
     width: 1200px;
+    margin: 0 auto;
     display: flex;
+}
+
+/* header */
+
+.header {
     justify-content: space-between;
+    align-items: center;
+    padding: 17px 120px;
 }
 
 .menu {
     display: flex;
     justify-content: space-between;
+    gap: 20px;
+}
+
+.menu__link>a {
+    color: #2F281E;
+    font-weight: 400;
+}
+
+.menu__link>a:hover {
+    color: #F90
 }
 
 .sign {
@@ -37,14 +109,11 @@ li {
 
 .signin,
 .signup {
-    display: flex;
     width: 110px;
     height: 46px;
-    padding: 13px 25px;
-    justify-content: center;
-    align-items: center;
-    flex-shrink: 0;
     border-radius: 4px;
+    font-family: "Montserrat", Arial, Helvetica, sans-serif;
+    font-size: 16px;
     font-weight: 600;
 }
 
@@ -58,4 +127,140 @@ li {
     border: 1px solid #F90;
     color: #fff;
     background-color: #F90;
+}
+
+/* main */
+
+.hero {
+    justify-content: space-between;
+    padding-top: 70px;
+}
+
+.hero-text {
+    max-width: 500px;
+    height: 300px;
+    padding-top: 97px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+h1 {
+    color: #2F281E;
+    font-size: 44px;
+    font-weight: 700;
+    line-height: 54px;
+}
+
+.hero-text>p {
+    font-size: 18px;
+    line-height: 28px;
+    font-weight: 400;
+}
+
+.get-started {
+    width: 180px;
+    height: 50px;
+}
+
+.superpowers {
+    padding-top: 91px;
+    flex-direction: column;
+}
+
+.main-idea {
+    text-align: center;
+    max-width: 539px;
+    margin: 0 auto;
+    padding-bottom: 31px;
+}
+
+h2,
+h3 {
+    color: #2F281E;
+    line-height: normal;
+}
+
+h2 {
+    font-size: 36px;
+    font-weight: 700;
+}
+
+h3 {
+    font-size: 22px;
+    font-weight: 600;
+}
+
+.options {
+    padding-top: 19px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.options li {
+    max-width: 270px;
+}
+
+.options__col h3 {
+    padding-top: 25px;
+    padding-bottom: 16px;
+}
+
+.main-idea__button {
+    margin: 0 auto;
+    padding-top: 70px;
+    padding-bottom: 74px;
+}
+
+/* footer */
+
+.footer {
+    padding-top: 70px;
+    padding-bottom: 70px;
+    display: flex;
+    justify-content: space-between;
+}
+
+h4 {
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 30px;
+}
+
+.col__list,
+.footer__signup {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.col__list {
+    max-width: 135px;
+    padding-top: 30px;
+    gap: 15px;
+}
+
+.footer__signup {
+    gap: 25px;
+}
+
+.footer__signup h4 {
+    max-width: 280px;
+}
+
+#phone {
+    border-radius: 4px;
+    border: 1px solid #BCD0E5;
+    display: flex;
+    width: 340px;
+    height: 50px;
+    padding: 0px 10px;
+    align-items: center;
+    gap: 10px;
+}
+
+#phone::placeholder {
+    color: #BCD0E5;
+    font-weight: 400;
+    line-height: normal;
 }
