--- a/students/motkaliuk_andrii/11_flexbox_bootstrap/css/styles.css
+++ b/students/motkaliuk_andrii/11_flexbox_bootstrap/css/styles.css
@@ -9,20 +9,17 @@ body {
     width: 100%;
     padding: 0 120px;
     box-sizing: border-box;
-    /* background-image: url(../images/curve.svg);
-    background-position: bottom;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: bottom 100px; */
+
 }
 
-.header_container {
+.header {
     display: inline-block;
     font-size: 0px;
     width: 100%;
+    padding-top: 15px;
 }
 
-.emblem {
+.logo {
     display: inline-block;
     text-align: left;
     vertical-align: top;
@@ -30,17 +27,17 @@ body {
     padding-top: 10px;
 }
 
-.navigation_list {
+.menu {
     display: inline-block;
     margin: 0 auto;
 }
 
-.navigation_item {
+.menu_item {
     display: inline-block;
     padding-top: 28px;
 }
 
-.navigation_item>a {
+.menu_item>a {
     text-decoration: none;
     color: #2F281E;
     font-size: 16px;
@@ -48,15 +45,15 @@ body {
     line-height: 0px;
 }
 
-.navigation_item:first-child {
+.menu_item:first-child {
     padding-left: 160px;
 }
 
-.navigation_item:not(:first-child) {
+.menu_item:not(:first-child) {
     padding-left: 20px;
 }
 
-.navigation_item>a:hover {
+.menu_item>a:hover {
     color: #F90;
 }
 
@@ -100,7 +97,7 @@ button {
 }
 
 /* The design container */
-.design_container {
+.design {
     display: flex;
     padding-top: 15px;
     padding-bottom: 100px;
@@ -150,12 +147,22 @@ button {
 }
 
 /* We design container */
+.we-design {
+    background-image: url(../images/curve.svg);
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom 100px;
+
+}
+
 .we_design_container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-content: flex-start;
     padding-bottom: 75px;
+
 }
 
 .we_design_header {
@@ -197,7 +204,7 @@ button {
 }
 
 /* Footer */
-.footer_container {
+.footer {
     display: flex;
     max-width: 1200px;
     width: 100%;
