done; before simplifying

--- a/students/motkaliuk_andrii/13_pre_post_processors/src/css/_variables.scss
+++ b/students/motkaliuk_andrii/13_pre_post_processors/src/css/_variables.scss
@@ -1,13 +1,21 @@
-$color-red: red;
-$color-green: green;
-$color-lite: lightgray;
-$default-body-color: $color-lite;
+$color-light-gray-1: #898F8F;
+$color-light-gray-2: #CCCCCC;
+$color-mid-gray: #666;
+$color-black: #333;
+$color-gold: #FFCC00;
+$default-body-color: #FFF;
 
+// fonts
 $default-font-name: 'Roboto';
 $fallback: Arial, Helvetica, sans-serif;
-$main-font: $default-font-name, $fallback;
+$default-font-size: 18px;
 
-$container-padding: 15px;
-$container-max-width: 1200px;
+$main-font: $default-font-name, $fallback;
+$font-path: './fonts/';
+
+$container-padding: 122px 135px;
+$container-max-width: 1440px;
 
 $font-path: './fonts/';
+$default-width: 1440px;
+$gap: 15px;
