--- a/students/motkaliuk_andrii/13_pre_post_processors/src/css/_mixins.scss
+++ b/students/motkaliuk_andrii/13_pre_post_processors/src/css/_mixins.scss
@@ -10,14 +10,12 @@
     flex-wrap: $_flex-wrap;
 }
 
-
-
-@mixin font-face($_font-name, $_font-weight: 700, $_font-style: normal, $_font-family: $default-font-name) {
+@mixin font-face($_font-name, $_font-weight: 400, $_font-style: normal, $_font-family: $default-font-name) {
     @font-face {
-        font-family: $_font-name;
+        font-family: $_font-family;
         font-style: $_font-style;
         font-weight: $_font-weight;
-        src: url("#{$font-path}#{$_font-name}.woff2") format('woff2');
+        src: url('#{$font-path}#{$_font-name}.woff2') format('woff2');
     }
 }
 
@@ -96,12 +94,18 @@
     }
 
     @for $i from 1 through $count {
-        $width: 100% / $count * $i;
+        $width: math.div(100%, $count) * $i;
 
         .col-#{$i} {
             max-width: $width;
             width: 100%;
             flex-basis: $width;
         }
+    }
+}
+
+@mixin media($point: sm) {
+    @media screen and (max-width: map-get($breack-points, $point)) {
+        @content;
     }
 }
