--- a/students/motkaliuk_andrii/13_pre_post_processors/src/css/main/_main_info.scss
+++ b/students/motkaliuk_andrii/13_pre_post_processors/src/css/main/_main_info.scss
@@ -1,30 +1,28 @@
-.hero-header {
-    color: #666;
+.hero-name {
+    color: $color-mid-gray;
     text-align: center;
-    font-family: Roboto;
     font-size: 36px;
     font-weight: 900;
     text-transform: capitalize;
     position: relative;
-    padding-top: 70px;
-    padding-bottom: 25px;
-}
+    padding: 70px 0 25px;
 
-.hero-header::after {
-    content: "";
-    position: absolute;
-    max-width: 100px;
-    width: 100%;
-    left: calc(50% - 50px);
-    bottom: 0;
-    height: 1px;
-    background-color: $color-gold;
+    &::after {
+        content: "";
+        position: absolute;
+        max-width: 100px;
+        width: 100%;
+        left: calc(50% - 50px);
+        bottom: 0;
+        height: 1px;
+        background-color: $color-gold;
+    }
 }
 
 .hero-position {
-    color: #666;
+    color: $color-mid-gray;
     text-align: center;
-    font-family: Raleway;
+    font-family: Raleway, $fallback;
     font-size: 24px;
     font-weight: 400;
     line-height: 36px;
@@ -41,17 +39,17 @@
 
 .links-icon {
     padding-left: 5px;
-}
 
-.links-icon:first-child {
-    padding-left: 0;
+    &:first-child {
+        padding-left: 0;
+    }
 }
 
 .description {
     margin: 0 auto;
     color: #333;
     text-align: center;
-    font-family: Raleway;
+    font-family: Raleway, $fallback;
     font-size: 14px;
     font-style: normal;
     font-weight: 500;
@@ -61,20 +59,36 @@
     max-width: 430px;
 }
 
-.description::after {
-    display: block;
-    content: "";
-    position: absolute;
-    max-width: 50px;
-    width: 100%;
-    left: calc(50% - 25px);
-    bottom: 0;
-    // height: 4px;
-    border-bottom: 4px dashed $color-gold ;
-    // background-color: $color-gold;
+.pseudo-element {
+    position: relative;
+
+    &::before {
+        display: block;
+        content: "";
+        position: absolute;
+        max-width: 50px;
+        width: 100%;
+        left: calc(50% - 25px);
+        bottom: 0;
+        border-bottom: 4px solid $color-gold;
+    }
+
+    &::after {
+        display: block;
+        content: "";
+        position: absolute;
+        max-width: 20px;
+        width: 100%;
+        left: calc(50% - 14px);
+        bottom: 0;
+        border-left: 4px solid $default-body-color;
+        border-right: 4px solid $default-body-color;
+        height: 4px;
+        background-color: transparent;
+    }
 }
 
-.button-box {
+.button {
     display: flex;
     justify-content: center;
     padding-top: 25px;
@@ -82,12 +96,9 @@
 
 .view-profile-button {
     color: #666;
-    text-align: center;
-    font-family: Open Sans;
+    font-family: Open Sans, $fallback;
     font-size: 14px;
-    font-style: normal;
     font-weight: 700;
-    line-height: 14px;
     text-transform: uppercase;
     text-decoration: none;
     border: 1px solid $color-gold;
