--- a/students/motkaliuk_andrii/13_pre_post_processors/src/css/main/_title.scss
+++ b/students/motkaliuk_andrii/13_pre_post_processors/src/css/main/_title.scss
@@ -49,6 +49,6 @@
         background-color: $default-body-color;
         width: 20px;
         height: 20px;
-        background-image: url(../../images/bonfire-sharp.svg);
+        background-image: url(../images/bonfire_sharp.svg);
     }
 }
