--- a/students/linov_mykhailo/11_flexbox/css/styles.css
+++ b/students/linov_mykhailo/11_flexbox/css/styles.css
@@ -170,12 +170,16 @@ h4 {
 }
 
 .superpowers {
-    padding-top: 91px;
+    padding-top: 75px;
     flex-direction: column;
+}
+
+.bg {
     background-image: url(../images/svg/bg.svg);
+    background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: bottom 100px;
+    background-position: bottom 80px;
 }
 
 .main-idea {
