--- a/students/hridina_anastasiia/10_boxmodel/productly/css/style.css
+++ b/students/hridina_anastasiia/10_boxmodel/productly/css/style.css
@@ -98,12 +98,10 @@
     max-width: 1200px;
     padding: 15px;
     margin: 0 auto;
-    box-sizing: border-box;
 }
 
 .footer__logo {
     float: left;
-    width: 30%;
 }
 
 .footer::after {
@@ -112,25 +110,28 @@
     clear: both;
 }
 
+.block__one {
+    padding-left: 150px;
+}
+
 .block__one,
 .block__two {
     line-height: 35px;
     display: inline-block;
-    width: 15%;
-    padding-right: 45px;
+    width: 20%;
 }
 
 .block__one h4,
 .block__two h4 {
-    text-align: center;
-    line-height: 10px;
-    padding-right: 40px;
+    line-height: 25px;
+    margin-left: 0;
+    margin-top: 0;
 }
 
 .quick__links,
 .legal__staff {
-    display: inline-block;
     list-style-type: none;
+    padding-left: 0;
 }
 
 .block__links a {
@@ -157,6 +158,7 @@
 
 .input h4 {
     line-height: 25px;
+    margin-top: 0;
 }
 
 .button3 {
@@ -172,7 +174,7 @@
 .buttons {
     float: right;
     width: 18%;
-    padding-right: 100px;
+    padding-right: 115px;
 }
 
 input[type=number] {
