--- a/students/havrylova_kateryna/11_flexbox/css/style.css
+++ b/students/havrylova_kateryna/11_flexbox/css/style.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
-
-
 body {
     font-family: Montserrat, Arial, Helvetica, sans-serif;
     color: #544837;
@@ -21,7 +18,6 @@ body {
 .section2__content {
     display: flex;
     flex-wrap: wrap;
-    /* margin: 0 -15px; */
     justify-content: space-between;
     align-items: center;
 }
@@ -44,9 +40,10 @@ a {
 }
 
 .in {
+    font: inherit;
     color: #2F281E;
-    font-size: 16px;
-    font-family: Montserrat;
+    /* font-size: 16px;
+    font-family: Montserrat; */
     font-weight: 600;
     border-radius: 4px;
     border: 1px solid #BCD0E5;
@@ -56,9 +53,10 @@ a {
 }
 
 .up {
+    font: inherit;
     color: #FFF;
-    font-size: 16px;
-    font-family: Montserrat;
+    /* font-size: 16px;
+    font-family: Montserrat; */
     font-weight: 600;
     border-radius: 4px;
     border: 1px solid #FF9900;
@@ -92,7 +90,6 @@ a {
 .section1__text-title {
     color: #2F281E;
     font-size: 44px;
-    font-style: normal;
     font-weight: 700;
     line-height: 54px;
 }
@@ -111,16 +108,13 @@ a {
     color: #2F281E;
     text-align: center;
     font-size: 36px;
-    font-style: normal;
     font-weight: 700;
-    line-height: normal;
     padding-bottom: 50px;
 }
 
 .button-large {
+    font: inherit;
     color: #FFF;
-    font-size: 16px;
-    font-family: Montserrat;
     font-weight: 600;
     border-radius: 4px;
     border: 1px solid #FF9900;
@@ -138,14 +132,14 @@ a {
 .section2__block-title {
     color: #2F281E;
     font-size: 22px;
-    font-style: normal;
     font-weight: 600;
-    line-height: normal;
 }
 
-.footer {
+.conteiner_footer {
     display: flex;
-    padding-bottom: 70px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: top;
 }
 
 .footer__links {
@@ -154,12 +148,13 @@ a {
 
 }
 
-
+img {
+    max-width: 100%;
+}
 
 .links_title {
     color: #2F281E;
     font-size: 20px;
-    font-style: normal;
     font-weight: 700;
     line-height: 30px;
     margin: 0;
@@ -178,11 +173,7 @@ a {
     border-radius: 4px;
     border: 1px solid #BCD0E5;
     color: #BCD0E5;
-    font-family: Montserrat;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+    font: inherit;
 }
 
 .footer-btn {
