fixed all issues

--- a/students/havrylova_kateryna/11_flexbox/css/style.css
+++ b/students/havrylova_kateryna/11_flexbox/css/style.css
@@ -87,6 +87,11 @@ a {
 
 }
 
+[class*="col-"] {
+    padding: 15px;
+    box-sizing: border-box;
+}
+
 .section1__text-title {
     color: #2F281E;
     font-size: 44px;
