--- a/students/motkaliuk_andrii/14_vector_graphics/src/css/footer/_footer_logo.scss
+++ b/students/motkaliuk_andrii/14_vector_graphics/src/css/footer/_footer_logo.scss
@@ -1,19 +1,19 @@
 .footer {
-    display: flex;
-    max-width: 1200px;
-    width: 100%;
+    // display: flex;
+    // max-width: 1200px;
+    // width: 100%;
 }
 
-.footer_logo,
-.quick-links_block,
-.legal-stuff_block,
-.input_place {
-    display: inline-block;
-    text-align: left;
-    vertical-align: top;
-}
+// .footer_logo,
+// .quick-links_block,
+// .legal-stuff_block,
+// .input_place {
+//     display: inline-block;
+//     text-align: left;
+//     vertical-align: top;
+// }
 
-.footer_logo {
-    display: inline-block;
-    width: 26%;
-}
+// .footer_logo {
+//     display: inline-block;
+//     width: 26%;
+// }
