--- a/students/motkaliuk_andrii/14_vector_graphics/src/css/main/_we_design.scss
+++ b/students/motkaliuk_andrii/14_vector_graphics/src/css/main/_we_design.scss
@@ -8,28 +8,28 @@
 }
 
 .we-design_list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-content: flex-start;
+    // display: flex;
+    // flex-wrap: wrap;
+    // justify-content: space-between;
+    // align-content: flex-start;
     padding-bottom: 75px;
 
 }
 
 .we-design_header {
-    width: 100%;
-    display: inline-block;
-    color: #2F281E;
+    // width: 100%;
+    // display: inline-block;
+    // color: #2F281E;
     text-align: center;
     font-size: 36px;
-    font-weight: 700;
+    // font-weight: 700;
     line-height: 1.2em;
     padding-bottom: 55px;
 }
 
 .we-design_item {
-    width: 25%;
-    max-height: 175px;
+    // width: 25%;
+    // max-height: 175px;
 }
 
 .we-design_item_header {
@@ -40,8 +40,8 @@
 
 .we-design_content {
     padding-top: 20px;
-    font-size: 16px;
-    font-style: normal;
+    // font-size: 16px;
+    // font-style: normal;
     font-weight: 500;
     line-height: 26px;
 }
@@ -59,7 +59,7 @@
     background: #F90;
     color: #FFF;
     text-align: center;
-    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', $fallback;
     font-size: 16px;
     font-weight: 700;
 }
