--- a/students/motkaliuk_andrii/14_vector_graphics/src/css/footer/_input.scss
+++ b/students/motkaliuk_andrii/14_vector_graphics/src/css/footer/_input.scss
@@ -1,5 +1,5 @@
 .input_place {
-    display: inline-block;
+    padding-left: 55px;
 }
 
 .input_space_box {
@@ -9,13 +9,15 @@
 .input_space {
     width: 320px;
     height: 50px;
-    color: #BCD0E5;
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
-    font-size: 16px;
+    font-family: inherit;
     font-weight: 400;
     padding-left: 10px;
     border-radius: 4px;
-    border: 1px solid #BCD0E5;
+    border: 1px solid $blue-color;
+}
+
+input::-webkit-input-placeholder {
+    color: $blue-color;
 }
 
 .footer_button_box {
@@ -23,11 +25,10 @@
 }
 
 .footer_button {
-    font-family: 'Poppins', Arial, Helvetica, sans-serif;
-    color: #FFF;
+    font-family: 'Poppins', $fallback;
+    color: $white-color;
     padding: 13px 40px;
-    font-size: 16px;
     font-weight: 700;
-    background-color: #F90;
-    border: 1px solid #F90;
+    background-color: $orange-color;
+    border: 1px solid $orange-color;
 }
