--- a/students/motkaliuk_andrii/14_vector_graphics/src/css/footer/_links.scss
+++ b/students/motkaliuk_andrii/14_vector_graphics/src/css/footer/_links.scss
@@ -1,12 +1,3 @@
-.quick-links_block {
-    width: 22%;
-    padding-left: 20px;
-}
-
-.legal-stuff_block {
-    width: 22%;
-}
-
 .footer_headers {
     font-size: 20px;
     font-weight: 700;
@@ -25,7 +16,7 @@
 
 .quick-links_item,
 .legal-stuff_item {
-    color: #544837;
+    color: $gray-color;
     text-decoration: none;
     font-size: 16px;
     font-weight: 500;
