--- a/students/motkaliuk_andrii/14_vector_graphics/src/css/header/_buttons.scss
+++ b/students/motkaliuk_andrii/14_vector_graphics/src/css/header/_buttons.scss
@@ -1,25 +1,23 @@
 .sign-in-up {
-    display: inline-block;
+    display: flex;
+    justify-content: end;
 }
 
 .sign-in {
     display: inline-block;
-    padding-left: 190px;
 }
 
 [class$="_button"] {
     text-decoration: none;
-    font-size: 16px;
     font-weight: 600;
-    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
     border-radius: 4px;
-    border: 1px solid #BCD0E5;
+    border: 1px solid $blue-color;
 }
 
 .sign-in_button {
-    color: #2F281E;
-    background-color: #FFF;
-    border: 1px solid #BCD0E5;
+    color: $black-color;
+    background-color: $white-color;
+    border: 1px solid $blue-color;
     padding: 13px 25px;
 }
 
@@ -29,10 +27,9 @@
 }
 
 .sign-up_button {
-    color: #FFF;
-    font-size: 16px;
-    background-color: #F90;
+    color: $white-color;
+    background-color: $orange-color;
     border-radius: 4px;
-    border: 1px solid #F90;
+    border: 1px solid $orange-color;
     padding: 13px 25px;
 }
