--- a/students/motkaliuk_andrii/14_vector_graphics/src/css/header/_logo.scss
+++ b/students/motkaliuk_andrii/14_vector_graphics/src/css/header/_logo.scss
@@ -1,7 +1,5 @@
 .logo {
-    display: inline-block;
-    text-align: left;
-    vertical-align: top;
-    width: calc(100% / 5);
-    padding-top: 10px;
+    // text-align: left;
+    // vertical-align: top;
+    // padding-top: 10px;
 }
