--- a/students/motkaliuk_andrii/14_vector_graphics/src/css/main/_the_design.scss
+++ b/students/motkaliuk_andrii/14_vector_graphics/src/css/main/_the_design.scss
@@ -6,27 +6,22 @@
 
 .design_item1 {
     padding-top: 170px;
-    width: 45%;
 }
 
 .design_item2 {
-    width: 55%;
+    text-align: end;
     padding-top: 70px;
-    padding-left: 30px;
 }
 
 .design_header {
     font-size: 44px;
-    font-weight: 700;
     line-height: 54px;
 }
 
 
 .design_item_content {
     padding-top: 30px;
-    color: #544837;
     font-size: 18px;
-    font-weight: 400;
     line-height: 28px;
 }
 
@@ -36,10 +31,8 @@
 
 .get_started_button {
     padding: 13px 40px;
-    border: none;
-    background: #F90;
-    color: #FFF;
-    text-align: center;
-    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    background: $orange-color;
+    color: $white-color;
+    font-family: 'Poppins', $fallback;
     font-weight: 700;
 }
