--- a/students/motkaliuk_andrii/14_vector_graphics/src/css/_global.scss
+++ b/students/motkaliuk_andrii/14_vector_graphics/src/css/_global.scss
@@ -1,7 +1,3 @@
-// @include font-face('roboto-v30-latin-regular');
-// @include font-face('roboto-v30-latin-700', 700);
-
-/* montserrat-regular - latin */
 @font-face {
     font-display: swap;
     font-family: 'Montserrat';
@@ -10,7 +6,6 @@
     src: url('fonts/montserrat-v25-latin-regular.woff2') format('woff2');
 }
 
-/* montserrat-500 - latin */
 @font-face {
     font-display: swap;
     font-family: 'Montserrat';
@@ -19,7 +14,6 @@
     src: url('fonts/montserrat-v25-latin-500.woff2') format('woff2');
 }
 
-/* montserrat-600 - latin */
 @font-face {
     font-display: swap;
     font-family: 'Montserrat';
@@ -28,7 +22,6 @@
     src: url('fonts/montserrat-v25-latin-600.woff2') format('woff2');
 }
 
-/* montserrat-700 - latin */
 @font-face {
     font-display: swap;
     font-family: 'Montserrat';
@@ -37,7 +30,6 @@
     src: url('fonts/montserrat-v25-latin-700.woff2') format('woff2');
 }
 
-/* poppins-700 - latin */
 @font-face {
     font-display: swap;
     font-family: 'Poppins';
@@ -45,7 +37,6 @@
     font-weight: 700;
     src: url('fonts/poppins-v20-latin-700.woff2') format('woff2');
 }
-
 
 body {
     font-family: $main-font;
@@ -66,7 +57,6 @@ body {
 .row {
     display: flex;
     flex-wrap: wrap;
-    // margin: 0 (-$gap);
 }
 
 .col-12 {
@@ -84,13 +74,13 @@ body {
     width: 100%;
 }
 
-.col-4 {
-    max-width: calc(100% / 12 * 4);
+.col-5 {
+    max-width: calc(100% / 12 * 5);
     width: 100%;
 }
 
-.col-5 {
-    max-width: calc(100% / 12 * 5);
+.col-4 {
+    max-width: calc(100% / 12 * 4);
     width: 100%;
 }
 
@@ -107,4 +97,18 @@ body {
 [class*="header"] {
     color: $black-color;
     font-weight: 700;
+}
+
+[class$="_button"] {
+    text-decoration: none;
+    border-radius: 4px;
+    padding: 13px 40px;
+}
+
+a {
+    text-decoration: none;
+}
+
+footer {
+    padding-bottom: 70px;
 }
