--- a/students/motkaliuk_andrii/14_vector_graphics/src/css/footer/_input.scss
+++ b/students/motkaliuk_andrii/14_vector_graphics/src/css/footer/_input.scss
@@ -1,33 +1,31 @@
-.input_place {
+.knowing {
     padding-left: 55px;
 }
 
-.input_space_box {
+.input {
     padding-top: 20px;
-}
 
-.input_space {
-    width: 320px;
-    height: 50px;
-    font-family: inherit;
-    font-weight: 400;
-    padding-left: 10px;
-    border-radius: 4px;
-    border: 1px solid $blue-color;
+    &_space {
+        width: 320px;
+        height: 50px;
+        font-family: inherit;
+        padding-left: 10px;
+        border-radius: 4px;
+        border: 1px solid $blue-color;
+    }
 }
 
 input::-webkit-input-placeholder {
     color: $blue-color;
 }
 
-.footer_button_box {
+.footer_button-box {
     padding-top: 40px;
 }
 
 .footer_button {
     font-family: 'Poppins', $fallback;
     color: $white-color;
-    padding: 13px 40px;
     font-weight: 700;
     background-color: $orange-color;
     border: 1px solid $orange-color;
