--- a/students/motkaliuk_andrii/14_vector_graphics/src/css/header/_buttons.scss
+++ b/students/motkaliuk_andrii/14_vector_graphics/src/css/header/_buttons.scss
@@ -5,31 +5,23 @@
 
 .sign-in {
     display: inline-block;
-}
 
-[class$="_button"] {
-    text-decoration: none;
-    font-weight: 600;
-    border-radius: 4px;
-    border: 1px solid $blue-color;
-}
-
-.sign-in_button {
-    color: $black-color;
-    background-color: $white-color;
-    border: 1px solid $blue-color;
-    padding: 13px 25px;
+    &_button {
+        color: $black-color;
+        background-color: $white-color;
+        border: 1px solid $blue-color;
+        padding: 13px 25px;
+    }
 }
 
 .sign-up {
     display: inline-block;
     padding-left: 32px;
-}
 
-.sign-up_button {
-    color: $white-color;
-    background-color: $orange-color;
-    border-radius: 4px;
-    border: 1px solid $orange-color;
-    padding: 13px 25px;
+    &_button {
+        color: $white-color;
+        background-color: $orange-color;
+        border: 1px solid $orange-color;
+        padding: 13px 25px;
+    }
 }
