--- a/students/motkaliuk_andrii/14_vector_graphics/src/css/main/_we_design.scss
+++ b/students/motkaliuk_andrii/14_vector_graphics/src/css/main/_we_design.scss
@@ -5,61 +5,39 @@
     background-size: cover;
     background-position: bottom 100px;
 
-}
+    &_list {
+        padding-bottom: 75px;
 
-.we-design_list {
-    // display: flex;
-    // flex-wrap: wrap;
-    // justify-content: space-between;
-    // align-content: flex-start;
-    padding-bottom: 75px;
+    }
 
-}
+    &_header {
+        text-align: center;
+        font-size: 36px;
+        line-height: 1.2em;
+        padding-bottom: 55px;
+    }
 
-.we-design_header {
-    // width: 100%;
-    // display: inline-block;
-    // color: #2F281E;
-    text-align: center;
-    font-size: 36px;
-    // font-weight: 700;
-    line-height: 1.2em;
-    padding-bottom: 55px;
-}
+    &_item_header {
+        padding-top: 30px;
+        font-size: 22px;
+        font-weight: 600;
+    }
 
-.we-design_item {
-    // width: 25%;
-    // max-height: 175px;
-}
+    &_content {
+        padding-top: 20px;
+        font-weight: 500;
+        line-height: 26px;
+    }
 
-.we-design_item_header {
-    padding-top: 30px;
-    font-size: 22px;
-    font-weight: 600;
-}
+    &_button_container {
+        padding-top: 85px;
+        padding-left: calc(50% - 90px);
+    }
 
-.we-design_content {
-    padding-top: 20px;
-    // font-size: 16px;
-    // font-style: normal;
-    font-weight: 500;
-    line-height: 26px;
-}
-
-.we_disign_button_container {
-    width: 100%;
-    align-self: flex-start;
-    padding-top: 85px;
-    padding-left: calc(50% - 90px);
-}
-
-.we_disign_button {
-    padding: 13px 40px;
-    border: none;
-    background: #F90;
-    color: #FFF;
-    text-align: center;
-    font-family: 'Poppins', $fallback;
-    font-size: 16px;
-    font-weight: 700;
+    &_button {
+        background: $orange-color;
+        color: $white-color;
+        font-family: 'Poppins', $fallback;
+        font-weight: 700;
+    }
 }
