--- a/students/motkaliuk_andrii/10_css_box_model/denis_novik/css/styles.css
+++ b/students/motkaliuk_andrii/10_css_box_model/denis_novik/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Open Sans, Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
     color: #070707;
 }
 
@@ -24,7 +24,6 @@ body {
     color: #828282;
     text-decoration: none;
     font-size: 18px;
-    font-weight: 400;
 }
 
 .item_next {
@@ -68,7 +67,6 @@ h2 {
     line-height: 1.4em;
     text-align: center;
     font-size: 18px;
-    font-weight: 400;
 }
 
 .about_item2 {
@@ -79,7 +77,6 @@ h2 {
 p {
     text-align: center;
     font-size: 18px;
-    font-weight: 400;
 }
 
 h2 {
@@ -134,7 +131,6 @@ h2 {
     color: #828282;
     text-align: center;
     font-size: 14px;
-    font-weight: 400;
 }
 
 .stars {
@@ -207,7 +203,6 @@ a:hover {
     padding-top: 25px;
     color: #070707;
     font-size: 18px;
-    font-weight: 400;
     line-height: 1.3em;
 }
 
@@ -250,6 +245,5 @@ a:hover {
     color: #828282;
     text-align: center;
     font-size: 14px;
-    font-weight: 400;
     line-height: 1.3em;
 }
