add link to readme

--- a/students/linov_mykhailo/13_pre-post-processors/src/css/_variables.scss
+++ b/students/linov_mykhailo/13_pre-post-processors/src/css/_variables.scss
@@ -10,6 +10,8 @@ $default-body-color: $color-white;
 $default-font-name: 'Raleway';
 $fallback: Arial, Helvetica, sans-serif;
 $main-font: $default-font-name, $fallback;
+$title-font-name: 'Roboto';
+$title-font: $title-font-name, $fallback;
 $font-path: './fonts/';
 
 //containers
