--- a/students/tiselko_iryna/13_preprocessors/src/css/_global.scss
+++ b/students/tiselko_iryna/13_preprocessors/src/css/_global.scss
@@ -29,6 +29,41 @@
 
 body {
     font-family: $main-font;
+    font-size: $default-font-size;
+    font-weight: $default-font-weight;
+    font-style: normal;
+    line-height: 24px;
+    color: $color-darkgray;
+}
+
+h1 {
+    font-family: $headline-font-name, $fallback;
+    font-size: $h1-font-size;
+    color: $color-gold;
+    line-height: 66px;
+}
+
+h2 {
+    font-family: $headline-font-name, $fallback;
+    font-size: $h2-font-size;
+    color: $color-gray;
+}
+
+h3 {
+    font-size: $h3-font-size;
+    color: $color-gray;
+}
+
+button {
+    font-family: $btn-font-name;
+    font-size: inherit;
+    font-weight: 700;
+    line-height: 14px;
+    color: $color-gray;
+    border: 1px solid $color-gold;
+    background-color: $color-white;
+    text-align: center;
+    text-transform: uppercase;
 }
 
 .container {
