--- a/students/motkaliuk_andrii/12_position_transform/css/styles.css
+++ b/students/motkaliuk_andrii/12_position_transform/css/styles.css
@@ -21,7 +21,8 @@
  .container {
      display: flex;
      justify-content: space-between;
-     padding: 0 120px;
+     padding: 0 15px;
+     margin: 0 105px;
      max-width: 1200px;
      width: 100%;
      margin: 0 auto;
